Thu Apr 18 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - UNRELEASED
* Updated to work with new r10k iso install process.  It will no longer work
  with older builds.  You need to checkout version 2.3.0 to  build an older
  version.
  - changed simp.json template to reflect new flow.  (Note: Used a temp script
    to model simp env changes, see FIX ME.)
  - added site module installation with vagrant user manifest  because site module
    is not installed.
  - updated simp_conf.yaml in examples to reflect new simp cli changes.
  - added rake simp:packer:oldbuild to run with just test directory
    like the old days for a temporary bridge.
* Changes to simp.json template require packer version 1.4.0.  (The valid_exit_codes
  entry added during script reboot will ignore spurious errors that happen
  when the reboot script throws an error because it rebooted during the script.)
* Fixed errors in  simp:packer:build logic.
* removed support for puppet 4.10 and ruby 2.1.9.


Mon Apr 01 2019 Chris Tessmer <chris.tessmer@onyxpoint.com> - UNRELEASED

This patch refactors the `simp_packer_test.sh` and `simp_config.rb` scripts
into testable Ruby classes, and adds a few example unit tests.


* Added:
  - New rake task: `simp:packer:build`
  - New Rake task: `packer:validate`
  - Initial Ruby Unit tests
  - Each matrix log now includes information about its iteration
* Changed:
  - Fixed `VBoxManage hostonlyif ipconfig` logic
  - Refactored `simp_config.rb` and `simp_packer_test.sh` into code under `lib/`
* Removed:
  - Scripts: `simp_packer_test.sh` and `simp_config.rb`


Thu Nov 15 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.3.0

This release supports Puppet 5 and Hiera 5:

* Added:
  - `Simp::Packer::Publish::LocalDirTree.publish`
  - Matrix logs include iteration report
  - Matrix `encryption=on` automatically adds 2 minutes to `big_sleep`

* Changed:
  - Use Puppet 5 Hiera data paths (unless the version of SIMP is less than
    6.3.0)